<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >
    <item
        android:id="@+id/action_account"
        android:orderInCategory="100"
        android:title="@string/account"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_change_password"
        android:orderInCategory="100"
        android:title="@string/change_password"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_family"
        android:orderInCategory="100"
        android:title="@string/family_members"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>